# scapy-gptp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/actions/python-env/: action.yml
.github/workflows/: checks.yml  ci.yml
example/: ptp_example.pcapng  ptp_example.py
examples/: convert.py  search.py
gptp/: __init__.py  fields.py  layers.py  utils.py
src/gptp/: fields.py  layers.py  utils.py
tests/: test_fields.py  test_layers.py  test_utils.py
